styles/tachyons-overrides.css
/**
 * This adds a few intermdiate Tachyons style classes to handle special cases.
 * Definitely not ideal. We should define our own scales & such using css variables.
 * @see https://github.com/tachyons-css/tachyons-custom
 */

.h1\.25 {
  height: 1.25rem;
}

.w1\.25 {
  width: 1.25rem;
}

.h1\.5 {
  height: 1.5rem;
}

.w1\.5 {
  width: 1.5rem;
}

.h2\.5 {
  height: 3rem;
}

.w2\.5 {
  width: 3rem;
}

.bw0\.5 {
  border-width: 0.075rem;
}

@media screen and (min-width: 60em) {
  .h2\.5-l {
    height: 3rem;
  }

  .w2\.5-l {
    width: 3rem;
  }

  .h3\.5-l {
    height: 7rem;
  }

  .w3\.5-l {
    width: 7rem;
  }

  .h4\.5-l {
    height: 12rem;
  }

  .w4\.5-l {
    width: 12rem;
  }
}

/**
 * Typography
 */

.lh-normal {
  line-height: 1;
}

/**
 * Flexbox
 */
.flex-square {
  flex: 1 0 auto;
}

.flex-square:before {
  content: "";
  padding-top: 100%;
}

/**
 * Sizes
 */
.mh-30vh {
  max-height: 30vh;
}

